// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Should return ExpenseSummary with 0 expense 1`] = `
<div>
  <p>
    Viewing 
    12
     expenses totalling 
    $222,342.22
  </p>
</div>
`;

exports[`Should return ExpenseSummary with expense 1`] = `
<div>
  <p>
    Viewing 1 expense totalling 
    $2.22
  </p>
</div>
`;
